@@ -141,7 +141,7 @@ int ws_xml_enum_children(WsXmlNodeH parent, WsXmlEnumCallback callback,
 WsXmlNodeH ws_xml_add_child(WsXmlNodeH node, const char *ns,
 			    const char *localName, const char *val);
 WsXmlNodeH ws_xml_add_child_sort(WsXmlNodeH node, const char *ns,
-			    const char *localName, const char *val);
+			    const char *localName, const char *val, int xmlescape);
 
 WsXmlNodeH ws_xml_add_empty_child_format(WsXmlNodeH node,
 					 const char *nsUri,
