@@ -6,8 +6,12 @@
 - Minor changes:
   - Perl example code added (by warptrosse@gmail.com)
   - Fixes to the CMake build environment
-  - Fixes to the sfcc backend (argument handling)
-  - Many other bug fixes
+  - Fixes to the sfcc backend (argument handling, xml escaping)
+  - Many other bug fixes:
+    297: More detailed http status codes
+    309: Use correct namespace for detecting Filter node
+    288: CIM Provider Faults not getting propagated to client 
+    279: Openwsman server is adding extra CRLF
 
 2.1.1
 - Support SUNpro C compiler
